[gd_scene load_steps=15 format=3 uid="uid://bsqr7oaxve8ba"]

[ext_resource type="PackedScene" uid="uid://dl612dx4odxl0" path="res://assets/models/machine.glb" id="2_k2f0e"]
[ext_resource type="Material" path="res://assets/materials/processor.tres" id="3_lblde"]
[ext_resource type="Script" path="res://scenes/game/gameobjects/production_machine.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://b28rn55hxvivr" path="res://assets/audio/machine/machine_loop.wav" id="6"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="6_fr3as"]
[ext_resource type="AudioStream" uid="uid://bkbonr5n6iila" path="res://assets/audio/machine/machine_accept_item.wav" id="7"]
[ext_resource type="FontFile" uid="uid://qgku7moi1efd" path="res://assets/fonts/scribbles.ttf" id="7_ahmk3"]
[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="8"]

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(1.5, 3, 1.5)

[sub_resource type="BoxShape3D" id="8"]
size = Vector3(2.5, 3, 2.5)

[sub_resource type="LabelSettings" id="LabelSettings_4c0tk"]
font = ExtResource("7_ahmk3")
font_size = 25

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_imrx8"]
_data = {
"RESET": SubResource("6"),
"fade_in": SubResource("7")
}

[node name="production_machine" type="StaticBody3D" node_paths=PackedStringArray("prog_bar", "materials_label", "anim_player")]
collision_layer = 3
collision_mask = 0
script = ExtResource("5")
prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
materials_label = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/TitleLabel2")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("1")

[node name="machine" parent="." instance=ExtResource("2_k2f0e")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)

[node name="obj-production_machine" parent="machine" index="0"]
surface_material_override/0 = ExtResource("3_lblde")

[node name="ManufactureTimer" type="Timer" parent="."]

[node name="AcceptSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
stream = ExtResource("7")
bus = &"SoundFX"

[node name="MachineLoop" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
stream = ExtResource("6")
bus = &"SoundFX"

[node name="ItemDeposit" parent="." instance=ExtResource("8")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("6_fr3as")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "machine_name
creates good_name's"

[node name="TitleLabel2" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4c0tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="2"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = ""

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_imrx8")
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -32.0
offset_right = 116.5
offset_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Next Button to Press"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ASSEMBLE"

[node name="Button2" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ALIGN"

[node name="Button3" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CAUTERIZE"

[connection signal="timeout" from="ManufactureTimer" to="." method="_on_ManufactureTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="button_press" binds= [0]]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="button_press" binds= [1]]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer/Button3" to="." method="button_press" binds= [2]]

[editable path="machine"]
[editable path="CanvasLayer/HintObjectInterface"]
